syntax = "proto3";
package cosmos.authz.v1beta1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/authz/types";

// SendAuthorization allows the grantee to spend up to spend_limit coins from
// the granter's account.
message SendAuthorization {
  option (cosmos_proto.implements_interface) = "Authorization";

  repeated cosmos.base.v1beta1.Coin spend_limit = 1
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}

// GenericAuthorization gives the grantee unrestricted permissions to execute
// the provided method on behalf of the granter's account.
message GenericAuthorization {
  option (cosmos_proto.implements_interface) = "Authorization";

  // method name to grant unrestricted permissions to execute
  // Note: MethodName() is already a method on `GenericAuthorization` type,
  // we need some custom naming here so using `MessageName`
  string method_name = 1 [(gogoproto.customname) = "MessageName"];
}

// AuthorizationGrant gives permissions to execute
// the provide method with expiration time.
message AuthorizationGrant {
  google.protobuf.Any       authorization = 1 [(cosmos_proto.accepts_interface) = "Authorization"];
  google.protobuf.Timestamp expiration    = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

// UndelegateAuthorization allows the grantee to un-delegate tokens from provided set of validators
// on behalf of the granter's account.
message UndelegateAuthorization {
  option (cosmos_proto.implements_interface) = "Authorization";

  // validator_address specifies list of validator addresses from whom grantee can un-delegate tokens on behalf of granter's account.
  repeated string validator_address = 1;
  // max_tokens specifies the maximum amount of tokens can be un-delegate from a validator. If it is
  // empty, there is no spend limit and any amount of coins can be un-delegated.
  cosmos.base.v1beta1.Coin max_tokens = 2 [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coin"];
}